force-app/main/default/objects/Call_Log__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agent Records</relationshipLabel>
    <relationshipName>Agent</relationshipName>
    <type>Lookup</type>
</CustomField>