force-app/main/default/objects/Call_Log__c/fields/Call_End__c.field-meta.xml
<CustomField>
<fullName>Call_End__c</fullName>
<label>Call End</label>
<type>DateTime</type>
</CustomField>