force-app/main/default/objects/Call_Log__c/fields/Call_Start__c.field-meta.xml
<CustomField>
<fullName>Call_Start__c</fullName>
<label>Call Start</label>
<type>DateTime</type>
</CustomField>