force-app/main/default/objects/Call_Log__c/fields/Caller_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_Number__c</fullName>
    <label>Caller</label>
    <type>Phone</type>
</CustomField>