force-app/main/default/objects/Call_Log__c/fields/Duration_Sec__c.field-meta.xml
<CustomField>
    <fullName>Duration_Sec__c</fullName>
    <label>Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>