force-app/main/default/objects/Call_Log__c/fields/Normalized_Number__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Number__c</fullName>
    <label>Normalized</label>
    <length>15</length>
    <type>Text</type>
</CustomField>