force-app/main/default/objects/Call_Log__c/fields/Objections__c.field-meta.xml
<CustomField>
    <fullName>Objections__c</fullName>
    <label>Objections</label>
    <type>TextArea</type>
</CustomField>