force-app/main/default/objects/Call_Log__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Records</relationshipLabel>
    <relationshipName>CallLogPatient</relationshipName>
    <type>Lookup</type>
</CustomField>