force-app/main/default/objects/Call_Log__c/fields/TeleCMI_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>TeleCMI_Call_Id__c</fullName>
    <externalId>true</externalId>
    <label>TeleCMI Call ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>